S08P12A306-402 fix: z-index 오류 수정

--- a/src/components/Sticker/MoveablePiece.css
+++ b/src/components/Sticker/MoveablePiece.css
@@ -29,6 +29,7 @@ body,
   top: 100px;
   left: 100px;
   transform: translate(-50%, -50%);
+  z-index: 999;
 }
 
 .moveable {
